# rename

./: README.md  mypy.ini  pyproject.toml
src/: rename.py
tests/: __init__.py  test_rename.py
