[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rename"
description = 'Renames files using regular expression matching. This enables elegant handling of multiple renames using a single command.'
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-3.0-or-later"
keywords = []
authors = [
  { name = "Łukasz Langa", email = "lukasz@langa.pl" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Topic :: System :: Systems Administration",
  "Topic :: Text Processing :: Filters",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/ambv/rename#readme"
Issues = "https://github.com/ambv/rename/issues"
Source = "https://github.com/ambv/rename"

[project.scripts]
rename = "rename:run"

[project.optional-dependencies]
dev = [
  "black",
  "mypy",
  "pytest",
]

[tool.hatch.build]
sources = ["src"]

[tool.hatch.version]
path = "src/rename.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=rename --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = []

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
